# quintech_fan_in

./: .env  CSI-002-012_RfMatrix copy.html  Dockerfile  Makefile  README.dist  README.md  README.steps_to_create_proxy  RF_FAN_IN_PROXY_IMPLEMENTATION_PLAN.md  RF_FAN_IN_PROXY_IMPLEMENTATION_TODO.md  RF_FAN_IN_PROXY_STATUS_ANALYSIS.md  csi_properties-90.0.0-py3-none-any.whl  csi_properties.yml  docker-compose.yml  dof-rf.txt  error.txt  pyproject.toml  rules.txt  snmpwalk.txt
deployment/: .ansible_output_format.cfg  csi_deploy.sh  hosts
deployment/playbooks/: install_image.yml  install_service.yml  sanitize_service.yml  status.yml
jupyter/: Makefile  README.md  launcher.sh  requirements.txt  requirements.txt.tester  simplesdr.ipynb  test_harness.ipynb  tester.py  tester.sh
jupyter/csi_client/: .env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
jupyter/csi_client/.devcontainer/: devcontainer.json  docker-compose.yml
jupyter/csi_client/csi_client/: __init__.py  csi_client.py  maestrowebsocket.py
jupyter/lib/: csi_client-0.5.2-py3-none-any.whl
mibs/: 07. qec-matrix.mib
schemas/: snmp_to_dof_mapping.yml
src/commonlib/: README.md
src/commonlib/csi_properties/: .env  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  info.sh  pyproject.toml
src/commonlib/csi_properties/csi_properties/: VERSION_INFO  __init__.py  csi_properties.py
src/commonlib/csidof-0.1.0/: PKG-INFO  csidof-0.1.0-py3-none-any.whl  pyproject.toml
src/commonlib/csidof-0.1.0/src/csidof/dsp/: rationalresampler.py  rawdatacapture.py
src/commonlib/csidof-0.1.0/src/csidof/hardware/: antenna.py  antennacontrolsystem.py  blockdownconverter.py  blockupconverter.py  datastorage.py  environmentsensor.py  gainblock.py  gps.py  highpoweramplifier.py  rffiberconverter.py  sdrreceive.py  sdrtransmit.py  simplesdrreceive.py  simplesdrtransmit.py
src/commonlib/csidof-0.1.0/src/csidof/systemservices/: chainmanager.py
src/csi_quintech_rf_matrix/: __init__.py  main.py  proxy_backend.py  quintech_rf_matrix_mocker.py  quintech_rf_matrix_settings.py  snmp_config.py  (+2 more)
(+12 files in other folders)
