[tool.poetry]
name = "csi_quintech_rf_matrix"
version = "V1.3"
description = "FastAPI-based proxy for Make Model"
authors = ["CSI Platform"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
redis = "^4.3.4"
matplotlib = "^3.5.3"
aioredis = "^2.0.1"
easysnmp = "^0.2.6"
schedule = "^1.2.0"
python-box = "^7.0.1"
mergedeep = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
