[tool.poetry]
name = "csi-client"
version = "0.5.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "csi_client"}]

[tool.poetry.dependencies]
python = ">=3.8"
websocket-client = "^1.4.2"
requests = "^2.28.1"
wheel = "^0.38.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-runner = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
