[tool.poetry]
name = "csi_properties"
version = "90.0.0"
description = ""
authors = ["MITRE CSI PDK <csi@mitre.org>"]
readme = "README.md"
packages = [{include = "csi_properties"}]

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^1.4.2"
requests = "^2.28.1"
wheel = "^0.38.4"
redis = "^4.3.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-runner = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
